Add AbstractTask, ChoiceTask classes and refactoring
Behavior for ChoiceTask is not yet implemented