@@ -18,6 +18,7 @@
 package nl.tudelft.skills.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpSession;
 
@@ -38,6 +39,7 @@ import nl.tudelft.skills.dto.patch.SCModulePatchDTO;
 import nl.tudelft.skills.dto.view.SkillSummaryDTO;
 import nl.tudelft.skills.dto.view.edition.EditionLevelModuleViewDTO;
 import nl.tudelft.skills.model.SCModule;
+import nl.tudelft.skills.model.Task;
 import nl.tudelft.skills.playlists.service.ResearchParticipantService;
 import nl.tudelft.skills.repository.ModuleRepository;
 import nl.tudelft.skills.security.AuthorisationService;
@@ -139,9 +141,11 @@ public class ModuleController {
 	@PreAuthorize("@authorisationService.canDeleteModule(#id)")
 	public String deleteModule(@RequestParam Long id) {
 		SCModule module = moduleRepository.findByIdOrThrow(id);
-		var tasks = module.getSubmodules().stream()
+		List<Task> tasks = module.getSubmodules().stream()
 				.flatMap(s -> s.getSkills().stream())
-				.flatMap(s -> s.getTasks().stream()).toList();
+				.flatMap(s -> s.getTasks().stream())
+				.filter(t -> t instanceof Task)
+				.map(t -> (Task) t).collect(Collectors.toList());
 		tasks.forEach(taskCompletionService::deleteTaskCompletionsOfTask);
 		clickedLinkService.deleteClickedLinksForTasks(tasks);
 		moduleRepository.delete(module);
@@ -159,9 +163,11 @@ public class ModuleController {
 	@PreAuthorize("@authorisationService.canDeleteModule(#id)")
 	public ResponseEntity<Void> deleteModuleSetup(@RequestParam Long id) {
 		SCModule module = moduleRepository.findByIdOrThrow(id);
-		var tasks = module.getSubmodules().stream()
+		List<Task> tasks = module.getSubmodules().stream()
 				.flatMap(s -> s.getSkills().stream())
-				.flatMap(s -> s.getTasks().stream()).toList();
+				.flatMap(s -> s.getTasks().stream())
+				.filter(t -> t instanceof Task)
+				.map(t -> (Task) t).collect(Collectors.toList());
 		tasks.forEach(taskCompletionService::deleteTaskCompletionsOfTask);
 		clickedLinkService.deleteClickedLinksForTasks(tasks);
 		moduleRepository.delete(module);
